# cumaru

./: Makefile.am  Makefile.in  README  README.md  configure  configure.ac  make_wfa.am
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1
kalign/: Makefile.am  Makefile.in  Makefile_am_original  README.md  align_io.h  alignment.c  alignment.h  alignment_parameters.c  alignment_parameters.h  aln_data.h  alphabet.c  alphabet.h  bisectingKmeans.c  bisectingKmeans.h  bpm.c  bpm.h  euclidean_dist.c  global.h  kalign.h  kmeans.h  misc.c  msa.h  rng.c  run_kalign.c  rwalign.c  rwalign.h  sequence_distance.c  sequence_distance.h  tldevel.c  tldevel.h
kalign/unused/: aln_data.c  aln_data.h  msa.h  rwalign.c  rwalign.h
src/: Makefile.am  Makefile.in  main.c
